# DSA-Project-Car-parking-system-

./: BUILD_GUIDE.md  BUILD_PRIMARY.md  CMakeLists.txt  CRASH_FIX_SUMMARY.md  Makefile  Makefile.Debug  Makefile.Release  ParkingSystemUI.pro  QT_PROJECT_COMPLETION_REPORT.md  QT_UI_COMPLETION_CHECKLIST.md  README.md  TODO.md  UI_IMPLEMENTATION_SUMMARY.md  UI_README.md  main-window.cpp  output.txt  run.bat  test_stress.cpp
Src/: AllocationEngine.cpp  ParkingArea.cpp  ParkingRequest.cpp  ParkingSlot.cpp  ParkingSystem.cpp  RollbackManager.cpp  Vehicle.cpp  Zone.cpp  main-window.cpp  main.cpp
build_qt/: Makefile  Makefile.Debug  Makefile.Release
build_qt/release/: moc_MainWindow.cpp  object_script.ParkingSystemUI.Release
debug/: object_script.ParkingSystemUI.Debug
include/: AllocationEngine.h  Common.h  LinkedList.h  MainWindow.h  Node.h  ParkingArea.h  ParkingRequest.h  ParkingSlot.h  ParkingSystem.h  RollbackManager.h  Stack.h  Vehicle.h  Zone.h
src/: AllocationEngine.cpp  MainWindow.cpp  ParkingArea.cpp  ParkingRequest.cpp  ParkingSlot.cpp  ParkingSystem.cpp  RollbackManager.cpp  Vehicle.cpp  main-console.cpp  main-demo.cpp  main-interactive.cpp  main-qt.cpp  main.cpp  zone.cpp
